Fixed alignment with input container and dream container

--- a/styles/dreamInput.css
+++ b/styles/dreamInput.css
@@ -6,9 +6,10 @@ body {
 .input-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  align-items: flex-start;
   padding: 0;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .textbox {
@@ -52,7 +53,7 @@ body {
 }
 
 #dream {
-  margin-top: 80px;
+  margin-top: 10px;
   margin-left: 80px;
   margin-right: 80px;
   max-width: 100%;
